# neonsorcery

./: .gitignore  Dockerfile  README.md  SELF_HOSTING.md  docker-compose.yml  modals-plan.md  pyproject.toml  pyrightconfig.json
discretion/: AGENTS.md  manage.py
discretion/api/: views.py
discretion/armory/: apps.py  models.py
discretion/body_modifications/: models.py
discretion/campaigns/: admin.py  consumers.py  models.py  views.py
discretion/curators_desk/: forms.py  urls.py
discretion/discretion/: asgi.py  models.py  settings.py  urls.py  wsgi.py
discretion/forum/: forms.py  models.py
discretion/homebrew/: apps.py  urls.py
discretion/horror/: admin.py  models.py
discretion/magic/: admin.py  apps.py  models.py
discretion/modals_sidebars/: changes
discretion/pantheon/: models.py
discretion/partypad/: models.py  views.py
discretion/plots/: models.py  urls.py
discretion/portal/: admin.py  forms.py  models.py  urls.py  views.py
discretion/potions/: models.py
discretion/rulebook/: appendixes.py  models.py
discretion/rules/: admin.py  models.py  urls.py
discretion/vehicles/: models.py
discretion/worlds/: apps.py  context_processors.py  forms.py  middleware.py  models.py  unique_slugify.py  urls.py  views.py
entrypoints/: migrate.sh
phasesix/: AGENTS.md  newfolder.md
phasesix/api/: urls.py  views.py
phasesix/armory/: admin.py  models.py  urls.py  views.py
phasesix/body_modifications/: admin.py  models.py  views.py
phasesix/campaigns/: consumers.py  forms.py  models.py  routing.py  urls.py  views.py
phasesix/forum/: views.py
(+369 files in other folders)
